--- a/pages/about.html
+++ b/pages/about.html
@@ -106,25 +106,15 @@
           />
         </div>
         <div class="container w-full flex flex-row items-center md:w-1/2 px-4">
-          <p
-            class="font-normal text-[16px] text-center md:text-left italic md:pl-12 max-w-lg"
-          >
-            We are SeedSnitch, a platform dedicated to helping college students
+          <p class="font-normal text-[18px] text-center md:pl-12 max-w-lg">
+            SeedSnitch is a platform dedicated to helping college students
             transform their ideas into successful ventures. We are aware of the
             unique challenges that a student might come across while starting
             up, and we are here to bridge the gap through guidance and resources
-            essential to overcoming them. Our dedication to fostering the
-            success of young entrepreneurs is deeply rooted. We are passionate
-            about helping young people succeed. We offer a wide range of
-            services to help startups succeed, including seed funding and
-            pre-seed funding opportunities, mentorship, and guidance from
-            experienced entrepreneurs. We are a community with a stern belief
-            that when entrepreneurs come together to share their share of
-            experiences and support, great things happen. So, whether you are
-            just starting out or are well on your way to building the next big
-            thing, join us on this thriving journey and let us help turn your
-            dreams into reality. With SeedSnitch, the possibilities are endless.
-            guidance and resources essential to overcoming them.
+            essential to overcoming them. Far beyond just a platform, we are a
+            community with a stern belief that when entrepreneurs come together
+            to share their share of experiences and support,
+            great things happen.
           </p>
         </div>
       </div>
