--- a/pages/contact.html
+++ b/pages/contact.html
@@ -171,6 +171,7 @@
                   class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-subject"
                   type="text"
+                  required
                   placeholder="Subject"
                 />
               </div>
