--- a/pages/about.html
+++ b/pages/about.html
@@ -80,7 +80,7 @@
       </div>
     </nav>
     <section
-      class="mx-auto container flex flex-col items-center mt-16 yellow gap-6 py-10 md:gap-16 md:pt-8"
+      class="w-full mx-auto flex flex-col items-center mt-16 yellow gap-6 py-10 md:gap-16 md:pt-8 md:w-full"
     >
       <!-- <img
         src="../img/about.jpg"
@@ -88,25 +88,19 @@
         alt="we are seedsnitch"
       /> -->
       <div
-        class="flex flex-col items-center justify-evenly mt-4 space-y-4 md:space-x-4 md:flex-row md:px-6"
+        class="flex flex-col items-center justify-between mt-4 space-y-4 md:space-x-4 md:flex-row md:px-6"
       >
-        <div class="container mx-auto w-full px-4 md:w-1/2">
-          <!-- <h1
-            class="text-3xl font-bold text-center text-[#242424] md:leading-[3.4rem] w-full md:text-5xl md:text-left"
-          >
-            Supporting College Students in
-            <span class="text-[#0fcab2]">
-              Launching Successful Business Ventures</span
-            >
-          </h1> -->
+        <div class="mx-auto w-full px-4 md:w-1/2">
           <img
             src="../img/about.jpg"
-            class="object-fill md:max-w-md md:block items-start"
+            class="object-fill w-full items-start"
             alt="we are seedsnitch"
           />
         </div>
         <div class="container w-full flex flex-row items-center md:w-1/2 px-4">
-          <p class="font-normal text-[18px] text-center md:pl-12 max-w-lg">
+          <p
+            class="font-normal text-[18px] text-center md:pl-12 max-w-lg md:max-w-full md:text-4xl leading-relaxed"
+          >
             SeedSnitch is a platform dedicated to helping college students
             transform their ideas into successful ventures. We are aware of the
             unique challenges that a student might come across while starting
