--- a/pages/faq.html
+++ b/pages/faq.html
@@ -89,7 +89,7 @@
         </div> -->
         <div class="faq-list">
           <div>
-            <details open>
+            <details>
               <summary>Is there a deadline to apply?</summary>
               <p class="faq-content">
                 We do not have a specific deadline to apply, and we accept
