--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,18 +83,20 @@
     </nav>
     <!-- Intro Section -->
     <section
-      class="mt-20 gap-x-8 h-[40vh] md:flex-row md:gap-x-16 bg-[#eeefef]"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row md:gap-x-16 bg-[#eeefef]"
     >
       <!-- #ffdad1-->
       <div
-        class="text-center w-full h-full mx-auto flex flex-col items-center justify-start pt-12"
+        class="text-center w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
       >
-        <div class="w-[800px]">
-          <h2 class="font-black text-5xl pb-2 text-accent">
+        <div class="w-full md:w-[800px] text-center">
+          <h2
+            class="md:font-black font-semibold text-4xl md:text-5xl pb-2 text-accent"
+          >
             <!-- text-[#f57456] -->
             Get in touch with us
           </h2>
-          <h2 class="text-2xl font-semibold text-[#242424]">
+          <h2 class="text-2xl font-medium md:font-semibold text-[#242424]">
             <!--text-[#242424]-->
             Our team is always ready to lend a helping hand and engage in a
             creative dialogue with you.
@@ -103,7 +105,10 @@
       </div>
     </section>
 
-    <section id="about-container" class="h-[590px] px-2 relative mb-12">
+    <section
+      id="about-container"
+      class="h-[590px] px-2 relative mb-12 md:mt-0 mt-12"
+    >
       <div
         class="h-full w-full flex flex-col gap-4 justify-between md:flex-row absolute -top-4 right-4"
       >
@@ -221,9 +226,6 @@
               </p>
               <div>
                 <div>
-                  <!-- <p><b>Office: </b>BITS Pilani, Rajasthan Campus</p> -->
-                  <!-- <p>P. O. Box No. - 1100XX&nbsp;</p> -->
-                  <!-- <p>Rajasthan, India</p> -->
                   <p class="font-medium text-center">
                     Phone:&nbsp;+91 8144200700&nbsp;
                   </p>
@@ -237,36 +239,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="box2 main w-1/3 h-2/3 bg-white rounded-md backdrop-blur-md">
-          <div
-            class="main-overlay flex flex-col justify-start items-center text-3xl p-4"
-          >
-            <h1 class="text-white font-bold text-center">Contact Us</h1>
-            <div
-              class="flex flex-col space-y-4 mt-6 items-start justify-center"
-            >
-              <span class="flex flex-row items-center justify-center space-x-2">
-                <i
-                  class="text-veryDarkBlue fas fa-light fa-xs fa-envelope fa-white"
-                ></i>
-                <p class="text-veryDarkBlue text-[20px]">contact@email.com</p>
-              </span>
-              <span class="flex flex-row items-center justify-center space-x-2">
-                <i
-                  class="text-veryDarkBlue fas fa-light fa-xs fa-phone fa-white"
-                ></i>
-                <p class="text-veryDarkBlue text-[20px]">+91 9876543219</p>
-              </span>
-              <span class="flex flex-row items-center justify-center space-x-2">
-                <i
-                  class="text-veryDarkBlue fas fa-light fa-xs fa-location-arrow fa-white"
-                ></i>
-                <p class="text-veryDarkBlue text-[20px]">BITS, Pilani Goa</p>
-              </span>
-            </div>
-          </div>
-        </div> -->
-      <!-- </div> -->
     </section>
     <footer class="bg-[#0f6d6d] text-white py-2">
       <div class="footer">
@@ -282,7 +254,6 @@
             <li><a href="#">Contact us</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">FAQ</a></li>
-            <!-- <li><a href="#">Terms & Conditions</a></li> -->
             <li><a href="#">Career</a></li>
           </ul>
         </div>
