--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>About | Seedsnitch</title>
+    <title>Ambassador Program | Seedsnitch</title>
   </head>
 
   <body>
@@ -79,14 +79,15 @@
         </button>
       </div>
     </nav>
+
     <section id="ambassador">
       <div
-        class="px-6 md:px-36 mx-auto flex flex-col-reverse items-center justify-center md:flex-row mt-24 text-[#242424]"
+        class="px-6 mx-auto flex flex-col-reverse items-center justify-center md:flex-row md:justify-between mt-24 text-[#242424]"
       >
         <div
           class="w-full h-auto flex flex-col items-center justify-center md:w-1/2"
         >
-          <h1 class="text-center text-5xl md:text-8xl font-semibold py-5">
+          <h1 class="text-center font-black text-5xl py-5">
             Become an <span class="text-accent"> Ambassador</span>
           </h1>
 
@@ -100,7 +101,7 @@
           <img
             src="../img/ambass.png"
             alt=""
-            class="w-[600px] object-cover min-w-[400px]"
+            class="w-[600px] object-contain min-w-[400px]"
           />
         </div>
       </div>
@@ -160,6 +161,222 @@
           </p>
         </div>
       </div>
+    </section>
+    <section>
+      <section
+        id="about-container"
+        class="h-auto px-2 relative mb-12 md:mt-0 mt-12"
+      >
+        <div
+          class="h-full w-full flex flex-col gap-4 justify-between md:flex-row"
+        >
+          <div
+            class="w-[600px] h-full rounded-md backdrop-blur-md mx-auto form border-t border-t-gray-200"
+          >
+            <form class="w-full h-full max-w-2xl px-4 py-6">
+              <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-name"
+                  >
+                    Name
+                  </label>
+                  <input
+                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-name"
+                    type="text"
+                    required
+                    placeholder="Name"
+                  />
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-email"
+                  >
+                    Email
+                  </label>
+                  <input
+                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-email"
+                    type="email"
+                    required
+                    placeholder="Enter your email id"
+                  />
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full md:w-full px-3">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-startname"
+                  >
+                    Startup name
+                  </label>
+                  <input
+                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-startname"
+                    type="text"
+                    required
+                    placeholder="Subject"
+                  />
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-linkedin"
+                  >
+                    Linkedin profile
+                  </label>
+                  <input
+                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-name"
+                    type="url"
+                    placeholder="Your linkedin profile"
+                  />
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-college"
+                  >
+                    College
+                  </label>
+                  <input
+                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-name"
+                    required
+                    type="text"
+                    placeholder="College name"
+                  />
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-date"
+                  >
+                    Year of Graduation
+                  </label>
+                  <input
+                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-date"
+                    required
+                    type="date"
+                  />
+                </div>
+              </div>
+              <hr class="mb-6" />
+              <div class="flex flex-wrap -mx-3 mb-2 mt-8">
+                <div class="w-full md:w-full px-3 mb-6 md:mb-0">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-desc"
+                  >
+                    Describe your startup?
+                  </label>
+                  <textarea
+                    class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-desc"
+                    placeholder="Tell us about your startup..."
+                    rows="7"
+                    required
+                  ></textarea>
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-2 mt-8">
+                <div class="w-full md:w-full px-3 mb-6 md:mb-0">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-prob"
+                  >
+                    What is the problem you are trying to solve with your
+                    startup?
+                  </label>
+                  <textarea
+                    class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-prob"
+                    placeholder="Problem statement"
+                    rows="7"
+                    required
+                  ></textarea>
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-2 mt-8">
+                <div class="w-full md:w-full px-3 mb-6 md:mb-0">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-desc"
+                  >
+                    Describe your startup?
+                  </label>
+                  <textarea
+                    class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-desc"
+                    placeholder="Tell us about your startup..."
+                    rows="7"
+                    required
+                  ></textarea>
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-stage"
+                  >
+                    What is the current status of your startup (ideation,
+                    early-stage)?
+                  </label>
+                  <input
+                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-stage"
+                    type="text"
+                    placeholder="Current status of startup"
+                  />
+                </div>
+              </div>
+              <div class="flex flex-wrap -mx-3 mb-2 mt-8">
+                <div class="w-full md:w-full px-3 mb-6 md:mb-0">
+                  <label
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    for="grid-diff"
+                  >
+                    How does your startup differentiate itself from similar
+                    products (if any)?
+                  </label>
+                  <textarea
+                    class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="grid-diff"
+                    placeholder="What stands you apart?"
+                    rows="7"
+                    required
+                  ></textarea>
+                </div>
+              </div>
+
+              <div class="w-full">
+                <div class="w-full flex flex-row items-center">
+                  <button
+                    class="shadow color focus:shadow-outline focus:outline-none text-white font-semibold px-3 py-2 rounded w-full bg-accent hover:bg-[#37a697]"
+                    type="button"
+                  >
+                    Send
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </section>
     <!-- <footer class="bg-[#0f6d6d] text-white py-2 mt-[100vh]">
       <div class="footer">
