--- a/index.html
+++ b/index.html
@@ -69,16 +69,17 @@
         class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
       >
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
-        <button
+        <a
           class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
-        </button>
-        <button
-          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white border-gray-500 hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+        </a>
+        <a
+          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+          href="pages/ambassador.html"
         >
           Become a ambassador
-        </button>
+        </a>
       </div>
     </nav>
     <!-- Intro Section -->
