--- a/pages/about.html
+++ b/pages/about.html
@@ -123,7 +123,7 @@
       </div>
 
       <main>
-        <p>
+        <p class="text-[20px]">
           <img
             src="../img/choose1.png"
             alt=""
@@ -133,7 +133,7 @@
           initial funding needed to get your business off the ground and help
           you with your first steps of execution.
         </p>
-        <p>
+        <p class="text-[18px]">
           <img
             src="../img/choose2.png"
             alt=""
@@ -144,7 +144,7 @@
           provides guidance and support to help you navigate the startup world
           and achieve your goals.
         </p>
-        <p>
+        <p class="text-[20px]">
           <img
             src="../img/calendar.png"
             alt=""
@@ -155,7 +155,7 @@
           prepares you for the startup world.
         </p>
 
-        <p>
+        <p class="text-[20px]">
           <img
             src="../img/campus.png"
             alt=""
