--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -80,7 +80,147 @@
       </div>
     </nav>
 
-    <section id="ambassador">
+    <section
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#eeefef] w-full"
+    >
+      <!-- #ffdad1-->
+
+      <div
+        class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
+      >
+        <div class="w-full md:w-[800px] text-center">
+          <h2
+            class="md:font-black font-bold text-4xl md:text-5xl pb-2 text-accent"
+          >
+            <!-- text-[#f57456] -->
+            <span class="text-[#242424]"> Become an </span>ambassador
+          </h2>
+          <h2 class="font-light text-2xl md:font-normal text-[#242424]">
+            <!--text-[#242424]-->
+            Join the seedsnitch ambassador program and become a superhero
+            sidekick that help peers turn ideas into startups and also earn
+            exciting rewards for each referral..
+          </h2>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div
+        class="py-4 text-center w-full h-full mx-auto flex flex-col items-center justify-start container"
+      >
+        <div class="w-full p-4 flex flex-row justify-evenly items-center">
+          <div class="hidden md:flex flex-row justify-center w-1/2">
+            <img
+              src="../img/ambass2.jpg"
+              class="w-[700px] object-right"
+              alt=""
+            />
+          </div>
+          <div
+            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-12 space-y-3"
+          >
+            <h1
+              class="md:font-black font-semibold text-4xl md:text-5xl pb-2 text-accent"
+            >
+              What is it about?
+            </h1>
+            <img
+              src="../img/ambass2.jpg"
+              class="block w-[200px] md:hidden"
+              alt=""
+            />
+            <p class="text-center text-[20px] font-normal md:text-left">
+              Welcome to the Seedsnitch Campus Ambassador Program, where we turn
+              boring college students into cool startup ambassadors. As a campus
+              ambassador, you'll have the opportunity to spread the word about
+              Seedsnitch and all the awesome resources we offer to help college
+              students turn their ideas into successful businesses. Imagine
+              being able to say, "I'm a startup ambassador," at parties or on a
+              first date. It's a conversation starter, trust us.<span id="dots"
+                >...</span
+              >
+              <span id="more">
+                But it's not just about impressing your friends; it's also about
+                making a real impact on your campus. You'll have the opportunity
+                to help identify and recruit the next generation of college
+                startup founders, and in return, you'll get to be part of a
+                community of like-minded individuals who are also on the journey
+                of building their own startups, gain valuable experience in the
+                startup world, and earn some extra money (you were finding that,
+                weren't you?). Think of it as a referral program: the more
+                members you bring in, the more rewards you earn. And let's be
+                real, who doesn't love some extra cash? Think of it as a
+                superhero sidekick role: you'll be helping your peers turn their
+                ideas into startups, and in return, you'll earn rewards.</span
+              >
+              <br /><button
+                onclick="myFunction()"
+                id="myBtn"
+                class="bg-[#242424] p-1 text-white text-[18px] my-2"
+              >
+                Read more
+              </button>
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="w-full p-4 flex flex-row-reverse justify-evenly items-center"
+        >
+          <div class="hidden md:flex flex-row justify-end w-1/2">
+            <img src="../img/img2.jpg" class="w-[700px] object-left" alt="" />
+          </div>
+          <div
+            class="container md:w-1/2 w-full flex flex-col items-center md:items-start md:pl-28 justify-center px-12 space-y-3"
+          >
+            <h1
+              class="md:font-black font-semibold text-4xl md:text-5xl pb-2 text-accent"
+            >
+              How does this work?
+            </h1>
+            <img
+              src="../img/img2.jpg"
+              class="block w-[200px] md:hidden"
+              alt=""
+            />
+            <p class="text-center text-[20px] font-normal md:text-left">
+              You apply for the program, and if we love your application (and
+              let's face it, who wouldn't love you? ), we'll give you a call and
+              invite you to join our squad. Your responsibilities as a campus
+              ambassador are simple: Make your peers aware of Seedsnitch and
+              find those hidden gems: the students on your campus who have a
+              burning passion to start a business but just need a little push.
+              And that's where we come in.
+              <span id="dots2">...</span>
+              <span id="more2">
+                We're here to be the support system for all those college
+                students who have big dreams and the drive to make them a
+                reality. We're not in it for the money; we're in it for the
+                passion. If you bring us a startup idea that has potential and
+                gets funded, you'll get a cut of the deal. So, the more
+                potential ideas you bring in, the more money you can make. But
+                you might be thinking, "How do I identify a potential idea?" The
+                answer is simple: Trust your gut. If something sounds too good,
+                it probably is. But if it sounds like the next big thing and
+                you're thinking "Oh my god, this is it!" then it probably
+                is.</span
+              >
+              <br />
+              <button
+                onclick="myFunction2()"
+                id="myBtn2"
+                class="bg-[#242424] p-1 text-white text-[18px] my-2"
+              >
+                Read more
+              </button>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section id="ambassador">
       <div
         class="px-6 mx-auto flex flex-col-reverse items-center justify-center md:flex-row md:justify-between mt-24 text-[#242424]"
       >
@@ -91,11 +231,7 @@
             Become an <span class="text-accent"> Ambassador</span>
           </h1>
 
-          <p class="mt-4 text-center text-3xl md:max-w-2xl">
-            Join the seedsnitch ambassador program and become a superhero
-            sidekick that help peers turn ideas into startups and also earn
-            exciting rewards for each referral..
-          </p>
+          <p class="mt-4 text-center text-3xl md:max-w-2xl"></p>
         </div>
         <div class="w-full flex flex-row items-end justify-center md:w-1/2">
           <img
@@ -377,7 +513,7 @@
           </div>
         </div>
       </section>
-    </section>
+    </section> -->
     <!-- <footer class="bg-[#0f6d6d] text-white py-2 mt-[100vh]">
       <div class="footer">
         <div class="row">
@@ -413,6 +549,38 @@
           x.classList.remove("navbarColor");
         }
       };
+      var btnText2 = document.getElementById("myBtn2");
+
+      function myFunction() {
+        var dots = document.getElementById("dots");
+        var moreText = document.getElementById("more");
+        var btnText = document.getElementById("myBtn");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Read more";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Read less";
+          moreText.style.display = "inline";
+        }
+      }
+      function myFunction2() {
+        var dots2 = document.getElementById("dots2");
+        var moreText2 = document.getElementById("more2");
+        var btnText2 = document.getElementById("myBtn2");
+
+        if (dots2.style.display === "none") {
+          dots2.style.display = "inline";
+          btnText2.innerHTML = "Read more";
+          moreText2.style.display = "none";
+        } else {
+          dots2.style.display = "none";
+          btnText2.innerHTML = "Read less";
+          moreText2.style.display = "inline";
+        }
+      }
     </script>
   </body>
 </html>
