about page-done

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
           href="pages/ambassador.html"
         >
-          Become a ambassador
+          Become an ambassador
         </a>
       </div>
     </nav>
