--- a/pages/about.html
+++ b/pages/about.html
@@ -75,7 +75,7 @@
         <button
           class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white border-gray-500 hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
         >
-          Become a ambassador
+          Become an ambassador
         </button>
       </div>
     </nav>
@@ -90,16 +90,16 @@
       <div
         class="flex flex-col items-center justify-between mt-4 space-y-4 md:space-x-4 md:flex-row md:px-6"
       >
-        <div class="mx-auto w-full px-4 md:w-1/2">
+        <div class="w-full px-4 md:w-1/2 md:flex justify-center">
           <img
             src="../img/about.jpg"
-            class="object-fill w-full items-start"
+            class="object-contain max-w-[600px] w-full"
             alt="we are seedsnitch"
           />
         </div>
         <div class="container w-full flex flex-row items-center md:w-1/2 px-4">
           <p
-            class="font-normal text-[18px] text-center md:pl-12 max-w-lg md:max-w-full md:text-4xl leading-relaxed"
+            class="text-[1em] md:text-[24px] font-[400] text-center md:pl-14 max-w-lg md:max-w-full leading-relaxed"
           >
             SeedSnitch is a platform dedicated to helping college students
             transform their ideas into successful ventures. We are aware of the
@@ -129,9 +129,9 @@
             alt=""
             class="hidden absolute -left-64 w-60 top-2 md:top-0 md:block"
           />
-          Seed funding and pre-seed funding opportunities: We provide the
-          initial funding needed to get your business off the ground and help
-          you with your first steps of execution.
+          <b> Seed funding and pre-seed funding opportunities:</b> We provide
+          the initial funding needed to get your business off the ground and
+          help you with your first steps of execution.
         </p>
         <p class="text-[18px]">
           <img
@@ -139,10 +139,10 @@
             alt=""
             class="hidden absolute -right-64 w-64 top-2 md:top-0 md:block"
           />
-          Mentorship and guidance from experienced entrepreneurs: Our team of
-          experienced entrepreneurs, industry professionals, and educators
-          provides guidance and support to help you navigate the startup world
-          and achieve your goals.
+          <b> Mentorship and guidance from experienced entrepreneurs: </b>Our
+          team of experienced entrepreneurs, industry professionals, and
+          educators provides guidance and support to help you navigate the
+          startup world and achieve your goals.
         </p>
         <p class="text-[20px]">
           <img
@@ -150,8 +150,8 @@
             alt=""
             class="hidden absolute -left-64 w-44 top-2 md:top-0 md:block"
           />
-          8-week cohort program: Our comprehensive 8-week cohort program covers
-          everything from ideation to execution to accelerated growth and
+          <b> 8-week cohort program: </b>Our comprehensive 8-week cohort program
+          covers everything from ideation to execution to accelerated growth and
           prepares you for the startup world.
         </p>
 
@@ -161,9 +161,10 @@
             alt=""
             class="hidden absolute -right-64 w-64 top-2 md:top-0 md:block"
           />
-          Campus ambassador program: A program open to all college students,
-          this program is a great way to gain valuable experience in the startup
-          world, network with like-minded individuals, and earn extra money.
+          <b> Campus ambassador program:</b> A program open to all college
+          students, this program is a great way to gain valuable experience in
+          the startup world, network with like-minded individuals, and
+          earn extra money.
         </p>
       </main>
     </section>
